--- a/submission/AdaptiveND_PrimieroAllo_revised.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised.tex
@@ -66,6 +66,8 @@
     { {#1}\vdash_{\textbf{\sf s+1\XBox}}  {#2}}
 \newcommand{\TurnMarkedprime}[2]
     { {#1}\vdash_{\textbf{\sf s'\XBox}}  {#2}}
+    \newcommand{\TurnPrimePrimeMarked}[2]
+        { {#1}\vdash_{\textbf{\sf s''\XBox}}  {#2}}
 
 
 \newcommand{\TurnMaxPlusOne}[2]
@@ -223,7 +225,7 @@ Middlesex University London\\
 \maketitle
 
 \begin{abstract}
-We present a multi-conclusion natural deduction calculus characterizing the dynamic reasoning typical of adaptive logics. The resulting system {\sf AdaptiveND} is sound and complete with respect to the propositional fragment of adaptive logic \textbf{CLuN$^r$}. This appears to be the first tree-format presentation of the standard linear dynamic proof system typical of Adaptive Logics. It offers the advantage of full transparency in the formulation of locally derivable rules, a connection between restricted inference rules and their adaptive counterpart, and the formulation of abnormalities as a subtype of well-formed formulas. These features of the proposed calculus are used to reconsider the question of classical recapture.
+We present a multi-conclusion natural deduction calculus characterizing the dynamic reasoning typical of adaptive logics. The resulting system {\sf AdaptiveND} is sound and complete with respect to the propositional fragment of adaptive logics based on  \textbf{CLuN}. This appears to be the first tree-format presentation of the standard linear dynamic proof system typical of Adaptive Logics. It offers the advantage of full transparency in the formulation of locally derivable rules, a connection between restricted inference rules and their adaptive counterpart, and the formulation of abnormalities as a subtype of well-formed formulas. These features of the proposed calculus are used to reconsider the question of classical recapture.
 \end{abstract}
 
 \section{Intro}
@@ -572,7 +574,7 @@ Next, the calculus is extended by introducing the conditional rule {\sf RC} (Fig
 
 \begin{figure}[h!]
 \begin{mathpar}
-\infer*[right=RC] {\Turn {\Gamma;\cdot} {\psi,\phi}\\ {\phi \in \Omega}} {\TurnNext {\Gamma; \phi^{-}} {\psi}}
+\infer*[right=RC] {\Turn {\Gamma;\Theta^{-}} {\psi,\phi}\\ {\phi \in \Omega}} {\TurnNext {\Gamma; (\Theta\cup\{\phi\})^{-}} {\psi}}
 \end{mathpar}
 
 \caption{Conditional Rule}\label{fig:adaptiverules}
@@ -604,7 +606,7 @@ Next, the calculus is extended by introducing the conditional rule {\sf RC} (Fig
 		\infer*[right=RC]{
         \infer*[right=Cut]{{\TurnFour {\Gamma; \cdot} {\phi_{1}, \phi}}
         	\infer*[right=Cut]{\TurnOne {\Gamma;\cdot} {\phi_2, \phi'}\\ {\TurnTwo {\phi_1, \phi_2;\cdot} {\phi_3}}}
-        	{\TurnThree {\Gamma', \phi_1 ;\cdot}{\phi_3, \phi'}} 
+        	{\TurnThree {\Gamma', \phi_1 ;\cdot}{\phi_3, \phi'}}
         }
         {\TurnFive {\Gamma, \Gamma'; \cdot} {\phi_{3}, \phi, \phi'} \\ \phi \in \Omega}}
     {\TurnSix {\Gamma, \Gamma'; \phi^-} {\phi_{3}, \phi'} \\ \phi' \in \Omega}}
@@ -630,12 +632,12 @@ Rule {\sf UnRel} says that given minimal disjunctions of abnormalities, each der
 \begin{definition}[Set of unreliable formulas]
 $\bigcup\Delta(\Gamma)$ derived at stage {\sf s} from $\Gamma$ denotes the union of all $\Delta_{1}, \dots, \Delta_{n}$ derived from $\Gamma$ up to stage {\sf s-1} according to {\sf MinDab}.
 \end{definition}
-Note that when the operator $\bigcup\Delta(\Gamma)$ occurs on the right-hand side of the tunrstile, its reading is not intended as disjunctive, as it is the case for normal a set $\Delta$ in the same position. The side condition for the Rule {\sf UnRel} ensures that each $\Delta_{i}^{min}$ used as a premise is still minimal at stage {\sf s-1}. 
+Note that when the operator $\bigcup\Delta(\Gamma)$ occurs on the right-hand side of the tunrstile, its reading is not intended as disjunctive, as it is the case for normal a set $\Delta$ in the same position. The side condition for the Rule {\sf UnRel} ensures that each $\Delta_{i}^{min}$ used as a premise is still minimal at stage {\sf s-1}.
 
 Choice sets provide selections of abnormalities that might turn out to be true at a stage {\sf s}, defined as follows:
 
 \begin{definition}[Choice set of $\{\Delta_{1}, \dots, \Delta_{n}\}$]
-$\Phi(\Gamma)$ derived at stage {\sf s} from $\Gamma$ denotes the set of choice sets of $\{\Delta_{1}, \dots, \Delta_{n}\}$ derived from $\Gamma$ up to stage {\sf s-1} according to {\sf MinDab}. We denote each such choice set with ${\sf choice_{i}}(\{\Delta_{1}, \dots, \Delta_{n}\})$.
+$\Phi(\Gamma)$ derived at stage {\sf s} from $\Gamma$ denotes the set of choice sets of some $\{\Delta_{1}, \dots, \Delta_{n}\}$ derived from $\Gamma$ up to stage {\sf s-1} according to {\sf MinDab}. We denote each such choice set with ${\sf choice_{i}}(\{\Delta_{1}, \dots, \Delta_{n}\})$.
 \end{definition}
 
 The choice set of an empty set of minimal disjunction of abnormalities is empty. This notion of choice set is procedurally implemented by the rule {\sf Choice} in Figure \ref{fig:mindab}, where again each premise must be intended as the conclusion of a {\sf MinDab} rule and the side condition ensures that each $\Delta_{i}^{min}$ used as a premise is still minimal at stage {\sf s-1}. The Rule {\sf MinChoice} allows the selection of a \textit{minimal} choice set out of $\Phi(\Gamma)$, denoted by ${\sf choice_{i}}(\{\Delta_{1},\ldots, \Delta_{n}\})^{min}$.
@@ -647,7 +649,7 @@ The choice set of an empty set of minimal disjunction of abnormalities is empty.
 
 \begin{figure}[t]
 \begin{mathpar}
-\infer*[right=MinDab] {\Turn {\Gamma; \cdot} {\Delta}\\ {\Delta \subset \Omega} \\ {\mbox { with no }\Delta'\subseteq \Delta \in \Omega, \mbox{ s.t. } \Gamma; \cdot \vdash_{\sf t<s'} \Delta'}} {\TurnPrime {\Gamma; \cdot} {\Delta^{min}}}
+\infer*[right=MinDab] {\Turn {\Gamma; \cdot} {\Delta}\\ {\Delta \subset \Omega} \\ {\mbox { with no }\Delta'\subseteq \Delta \mbox{ s.t. } \Gamma; \cdot \vdash_{\sf t<s'} \Delta'}} {\TurnPrime {\Gamma; \cdot} {\Delta^{min}}}
 \end{mathpar}
 
 
@@ -712,13 +714,12 @@ In standard Adaptive Logics, one introduces strategies to tell which application
 \item \textit{Minimal Abnormality}: once a $\Phi(\Gamma)$ is derived at some stage {\sf s}, a formula $\psi$ is marked if either (i) is derived at some prior stage {\sf s'} on an assumption $\Theta$ which intersects with every minimal choice-set ${\sf choice_{i}}(\{\Delta_{i}, \ldots, \Delta_{n}\})\in \Phi(\Gamma)$; or (ii) for some minimal choice-set ${\sf choice_{i}}(\{\Delta_{i}, \ldots, \Delta_{n}\})\in \Phi(\Gamma)$, there is no derivation of $\psi$ on another condition $\Theta'$, such that the intersection of $\Theta'$ with ${\sf choice_{i}}$ is empty.
 \end{itemize}
 %
-%In the first case, one considers all possible abnormal formulas to be invalid; in the second case, one tries to minimize the number of such unavoidable contradictions. 
-In this section, we extend {\sf AdaptiveND} with rules corresponding to both strategies by providing a proof-theoretic equivalent of the standard marking conditions. The conclusion of a Marking Rule expresses a dead-end for the tree, and as such its content should not be used as premise for any other step. Nonetheless, we wish to preserve all the information obtained in the tree, including retracted formulas, also in order to extract a linear proof from it: therefore, we allow marked judgements to be unused premises for any rule.
+In this section, we extend {\sf AdaptiveND} with rules corresponding to both strategies by providing a proof-theoretic reconstruction of the standard marking conditions. The conclusion of a Marking Rule expresses a dead-end for the tree, and as such its content should not be used as premise for any other step. Nonetheless, we wish to preserve all the information obtained in the tree, including retracted formulas, also in order to extract a linear proof from it: therefore, we allow marked judgements to be unused premises for any rule.
 
 
 \subsection{Marking Rule for Reliability}\label{sec:markrel}
 
-Reliability is the adaptive strategy that takes the most cautious interpretation of abnormalities: any formula that in view of the premises might behave abnormally, because it occurs in a minimal disjunction of abnormalities, is deemed unreliable and should not be assumed to behave normally. This means in practice that a formula derived on the assumption that $\phi$ behaves normally will be `marked' as soon as the unreliability of $\phi$ is established. The result of this marking is that $\psi$ should no longer be treated as a formula that was derived. 
+Reliability is the adaptive strategy that takes the most cautious interpretation of abnormalities: any formula that in view of the premises might behave abnormally, because it occurs in a minimal disjunction of abnormalities, is deemed unreliable and should not be assumed to behave normally. This means in practice that a formula derived on the assumption that $\phi$ behaves normally will be `marked' as soon as the unreliability of $\phi$ is established. The result of this marking is that $\psi$ should no longer be treated as a formula that was derived.
 %In the following we shall introduce a new inference-rule that internalizes this process in {\sf AdaptiveND}.
 
 %We shall first introduce a notion of union of all so-called unreliable formulas. To this aim, in the following we will refer to $\Sigma=\bigcup\{\Gamma,\Omega^{-}\}$, for some premises $\Gamma$ and some abnormal formulas $\Omega$ derivable from $\Gamma$:
@@ -747,6 +748,23 @@ In Figure \ref{fig:markR}, we define a new rule $\XBox$R that depends on the der
 %\infer*[right=$\XBox$R]{\Turn{\Sigma;\cdot}{\Delta^{min}}\\ \TurnPrime{\Sigma; \Psi^{-}}{\phi} \\ {\Psi \cap \Delta^{min}\neq \emptyset}}
 %{\TurnMaxPlusOneREL{\Sigma}{\phi}}
 %\end{mathpar}
+
+\subsection{Proofs as tree sequences}
+
+\begin{definition}[Proof Tree]
+A well-formed {\sf AdaptiveND} tree is a finite proof tree obtained by deriving AdaptiveND judgements from other {\sf AdaptiveND} judgements where
+\begin{enumerate}
+
+\item the top leaves of the tree are instances of the {\sf Prem} rule and
+\item each next step is obtained by applying one of the {\sf minimalND} proof rules or one of the {\sf AdaptiveND} proof rules.
+\end{enumerate}
+\end{definition}
+
+\begin{definition}[Adaptive Proof]
+An {\sf AdaptiveND} proof is a sequence of {\sf AdaptiveND} trees $T_{1}, \dots, T_{n}$ with consecutively numbered judgements across the trees.
+\end{definition}
+
+
 
 
 
@@ -823,7 +841,7 @@ Minimal abnormality is the marking strategy that reflects the following conditio
 
 The first marking rule $\XBox$M reflects the following condition: if a formula $\psi$ is derived at stage $s$ under an adaptive condition $\phi$ which is part of all minimal choice-sets in $\Phi(\Gamma)$ at stage $s'$, then at the next stage the formula $\psi$ can be retracted.
 
-The second marking rule $\XBox$M2 reflects the following condition: if a formula $\psi$ is derived always under an adaptive condition that is part of the same minimal choice-set in $\Phi(\Gamma)$, then at the next stage the formula $\psi$ can be retracted {\color{red}at all stages where it was previously derived}. Here the adaptive condition of the conclusion should be intended as saying that the retraction applies to all stages where the derivation of $\psi$ was obtained under one of the listed conditions.
+The second marking rule $\XBox$M2 reflects the following condition: if a formula $\psi$ is derived always under an adaptive condition that is part of the same minimal choice-set in $\Phi(\Gamma)$, then at the next stage the formula $\psi$ can be retracted. Here the adaptive condition of the conclusion should be intended as saying that the retraction applies to all stages where the derivation of $\psi$ was obtained under one of the listed conditions.
 
 
 
@@ -954,7 +972,7 @@ Let us consider now a slightly more complex example. We want to show a situation
 At stage {\sf 4} a disjunction of an abnormality with $r$ is derived, and by {\sf RC} at stage {\sf 6} the formula $r$ is derived alone, assuming the relevant abnormality to be false. Consider now a second derivation, dubbed $\mathbb{D}^{'}$:
 
 \begin{mathpar}
-\infer*[right=UnRel]{	
+\infer*[right=UnRel]{
 \infer*[right=RC]{
 \infer*[right=$\wedge$I] {
 \infer*[right=$\vee$E]{
@@ -970,7 +988,7 @@ Here the previously derived abnormality $(p \wedge \neg p)$ is unconditionally d
 \begin{mathpar}
 \infer*[right=\XBox]{
 {\infer*[]{\mathbb{D}}{\TurnFive {\Gamma;(p \wedge \neg p)^{-}}{r}}}\\{\infer*[]{\mathbb{D^{\prime}}}{\TurnTwelve {\Gamma; \cdot}{\bigcup(\{p\wedge \neg p,q\wedge \neg q\})}}}\\{(p \wedge \neg p)\in \Delta^{min}}
-}{\TurnMarkedThirteenREL{\Gamma; \cdot}{r}}
+}{\TurnMarkedThirteenREL{\Gamma; (p\wedge \neg p)^{-}}{r}}
 \end{mathpar}
 \bigskip
 
@@ -1001,13 +1019,17 @@ $\mathbb{D^{\prime\prime}}$ derives a single abnormality at stage {\sf 18}, for 
 \end{mathpar}
 \bigskip
 
-where $*$ is the side condition that $(p\wedge \neg p)\in \Omega$. If the derivation is no longer extended, the formula $r$ can be considered finally derived. In the next section we complete our system with the required meta-theoretical analysis needed to define derivability at stage and final derivability.
+where $*$ is the side condition that $(p\wedge \neg p)\in \Omega$. If the derivation is no longer extended, the formula $r$ can be considered finally derived.
 
 \subsection{Another Example}
 
-In the following example, we do not derive set of unreliable formulas when there is a single minimal disjunction of abnormalities. Let $\Gamma = \{p \vee q, \neg q,\\
-(q \wedge \neg q) \vee (r \wedge \neg r), (q \wedge \neg q) \to (r \wedge \neg r),\\
-(q \wedge \neg q) \vee (s \wedge \neg s), (q \wedge \neg q) \to (s \wedge \neg s)\}$\\
+In the following example, we do not derive a set of unreliable formulas when there is a single minimal disjunction of abnormalities. Let
+
+\begin{align*}
+\Gamma = & \{p \vee q, \neg q,\\
+& (q \wedge \neg q) \vee (r \wedge \neg r), (q \wedge \neg q) \to (r \wedge \neg r),\\
+& (q \wedge \neg q) \vee (s \wedge \neg s), (q \wedge \neg q) \to (s \wedge \neg s)\}\\
+\end{align*}
 
 Consider first the derivation $\mathbb{D}$:
 
@@ -1061,7 +1083,7 @@ As the previous example, we put these branches together (and re-use a renumbered
 
 \end{mathpar}
 
-But consider then the following variant of $\mathbb{E}$, denoted by $\mathbb{E}^*$: 
+But consider then the following variant of $\mathbb{E}$, denoted by $\mathbb{E}^*$:
 
 \begin{mathpar}
 \infer*[right=\XBox] {
@@ -1077,7 +1099,7 @@ But consider then the following variant of $\mathbb{E}$, denoted by $\mathbb{E}^
 {\TurnMarkedEighteenREL{\Gamma; (q \wedge \neg q)^-}{p}}
 \end{mathpar}
 
-and then a variant $\mathbb{F}^*$ of $\mathbb{F}$: 
+and then a variant $\mathbb{F}^*$ of $\mathbb{F}$:
 %{\color{red}some renumbering to be done}:
 
 \begin{mathpar}
@@ -1107,7 +1129,7 @@ which can once more be used to re-derive $p$:
 
 
 \subsection{Reconstruction of linear adaptive proofs}
-Before we consider the question of final derivability, which is needed to relate what is provable in dynamic proofs to a semantic consequence relation, we first show that every proof in \textsf{AdaptiveND} can, with the help of the numbering of the judgements, be mapped onto a correct (albeit somewhat redundant) adaptive proof in a linear format. This relates what can be derived at a stage in an \textsf{AdaptiveND}-proof to what can be derived at a stage in a linear proof.
+Before we consider the question of final derivability, which is needed to relate what is provable in dynamic proofs to a semantic consequence relation, we first show that every proof in \textsf{AdaptiveND} can, with the help of the numbering of the judgements, be mapped onto an (albeit somewhat redundant) adaptive proof in a linear format. This relates what can be derived at a stage in an \textsf{AdaptiveND}-proof to what can be derived at a stage in a linear proof.
 
 We illustrate the procedure by reconstructing the linear proof that corresponds to the example form Sections \ref{sec:example} and \ref{sec:example2}:
 \begin{center}
@@ -1126,17 +1148,19 @@ We illustrate the procedure by reconstructing the linear proof that corresponds 
 \end{center}
 In this proof, the application of $\vee$E on line (2) is based on the representation of the disjunctive comma by a `super-imposed' classical disjunction (a device that effectively plays the same role in adaptive logic, see \cite[\S 2.2, 2.7]{Strasser:AdaptiveLogicsForDefeasibleReasoning:}), whereas the application of $\wedge$I is valid in virtue of the \textbf{CLuN}-validity of $\neg p \vee q, p \vdash (p \wedge \neg p) \vee q$ which warrants the application of the unconditional rule (with empty conditions). The final marking is not added as a separate line, but is instead added in the fifth place on line 5 and labelled with the number of the line or stage at which the relevant abnormality was derived.
 
+In general, there is no guarantee that the translation of an {\sf AdaptiveND} proof into a linear adaptive proof will contain all the markings required by the latter. This is because we can translate a proof tree at a stage {\sf s} not yet unmerked, which will be merked at stage {\sf s+1} and still obtain a valid adaptive linear proof which in its standard format would be \textit{immediately} marked. Nonetheless, we can always guarantee that there is an extension of such a proof that contains the required marking.
+
+In the next section we complete our system with the required meta-theoretical analysis needed to define derivability at stage and final derivability.
+
 \section{Derivability}\label{sec:meta}
 
-In the example from the previous section we have illustrated how the marking condition establishes a dynamic derivability relation, which allows to derive formulas and retract them. Whenever a certain formula is derived on some $\phi\in \Delta^{min}$ adaptive condition, it might still be marked afterwards according to $\XBox R$. Consequently, a judgement of the form $\Turn{\Gamma; \Theta^-}{\psi}$ only expresses what is derived at a stage.
-% or $\XBox MA$.
-%This gives us a notion of derivability at stage:
+In the example from the previous section we have illustrated how the marking condition establishes a dynamic derivability relation, which allows to derive formulas and retract them. Whenever a certain formula is derived on some $\phi\in \Delta^{min}$ adaptive condition, it might still be marked afterwards according to $\XBox R$. Consequently, a judgement of the form $\Turn{\Gamma; \Theta^-}{\psi}$ only expresses what is derived at a stage. This gives us a notion of derivability at stage:
 
-%\begin{definition}[Derivability at stage]
+\begin{definition}[Derivability at stage]
 %$\Turn{\Gamma; \phi^{-}}{\psi}$ iff at ${\sf s}$ it is not the case that $\TurnMarked{\Gamma}{\psi}$.
-%A formula $\psi$ is derived at stage {\sf s}  iff $\Turn{\Gamma; \phi^{-}}{\psi}$ and it is not the case that $\TurnMarked{\Gamma; \cdot}{\psi}$.
+A formula $\psi$ is derived at stage {\sf s}  iff $\TurnPrime{\Gamma; \phi^{-}}{\psi}$ where $\mathsf{s'\leq s}$ and it is not the case that $\TurnPrimePrimeMarked{\Gamma; \cdot}{\psi}$, where $\mathsf{s'\leq s''\leq s}$.
 %$\Turn{\Gamma; \cdot}{\phi,\psi}$
-%\end{definition}
+\end{definition}
 
 A more stable notion of derivability, called \emph{final derivability}, holds when marking is no longer possible. This notion is customarily defined with a reference to possible extensions of a proof.\footnote{``A is finally derived from $\Gamma$ on line $i$ of a proof at stage $s$ iff (i) $A$ is the second element of line $i$, (ii) line $i$ is not marked at stage $s$, and (iii) every extension of the proof in which line $i$ is marked may be further extended in such a way that line $i$ is unmarked.'' \cite[229]{batens07}} Because we only take into consideration finite premise-sets, we can pursue a more explicit characterisation of final derivability.
 % Because our left-hand side of the $\vdash$ sign, hence our ``premise set'', includes the $\vee_{\sf CL}$ connective for $Dab$-formulas, it is in principle possible to generate trees where some standard adaptive consequences (i.e. consequences of a corresponding AL in standard format) would be first marked and then never get unmarked.\footnote{These results are based on the generic format for Adaptive logics presented in \cite{strasservandeputte12}. A different approach that allows insertion of lines in proof trees is given for the Standard Format in \cite{batens2009}.}
@@ -1196,7 +1220,7 @@ The focus on positive and negative parts of formulae goes back to \cite{Sch60}, 
 Given this preparatory work, we now introduce the notion of a \textit{complete proof-tree} with respect to derivable relevant disjunction of abnormalities:
 
 \begin{definition}[Completeness relative to relevant abnormalities]
-Let $P$ be a proof-tree of {\sf AdaptiveND}. We say that $P$ is complete relative to $\Omega(\Gamma)$ at stage {\sf s} if for every derivable $\bigvee(\Delta^{min})$ with $\Delta\subseteq\Omega(\Gamma)$ there is an $\mathsf{s' < s}$ such that $\TurnPrime{\Gamma;\cdot}{\bigvee(\Delta^{min})}$.
+Let $P$ be an {\sf AdaptiveND} proof. We say that $P$ is complete relative to $\Omega(\Gamma)$ at stage {\sf s} if for every derivable $\bigvee(\Delta^{min})$ with $\Delta\subseteq\Omega(\Gamma)$ there is an $\mathsf{s' < s}$ such that $\TurnPrime{\Gamma;\cdot}{\bigvee(\Delta^{min})}$.
 
 %
 %\begin{enumerate}
@@ -1206,18 +1230,38 @@ Let $P$ be a proof-tree of {\sf AdaptiveND}. We say that $P$ is complete relativ
 \end{definition}
 
 
+\begin{definition}[Completeness relative to marking]
+Let $P$ be an {\sf AdaptiveND} proof. We say that $P$ is complete relative to marking
+iff for every $\Gamma; \Theta^{-}\vdash_{{\sf s}} \phi$ occurring in a tree $T_{i}\in P$, if $\Gamma; \cdot\vdash_{{\sf s'>s}} \Delta^{min}$ with $\Theta^{-}\cap \Delta^{min}\neq \emptyset$ and no $\Gamma; \cdot\vdash_{{\sf s''>s'}} \Delta'^{min}$ with $\Delta'^{min}\subset \Delta^{min}$, there is a tree $T_{j>i}\in P$ such that $\Gamma; \Theta^{-}\vdash_{{\sf t\XBox}} \phi$ occurs in it.
+
+\end{definition}
+
 %By the first requirement all possible $Dab(\Delta)^{min}_{s}$ have been derived for  {\sf s}; and by the second requirement every formula is derived under the minimal conditions (hence any relevant condition for the marking has been obtained already).
 
 We can now formulate our notion of final derivability:
 
 \begin{definition}[Final Derivability]\label{def:finalder}
-A formula $\psi$ is finally derived $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ iff there is a stage {\sf s}  in some complete proof-tree $P$
- such that $\Turn{\Gamma;\phi^{-}}{\psi}$ and $\forall \Delta^{min},\phi \notin \Delta^{min}$.
-%, where $\Delta$ is the conclusion obtained  at some stage of $P$ by an instance of the \textsc{MinDab} rule.
+A formula $\psi$ is finally derived $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ if it is derived at the latest stage {\sf s} of some abnormality and marking complete proof $P$.
 \end{definition}
 %
 The definition guarantees final derivability for any derived formula whose adaptive condition is not minimal.
 %Notice that the second requirement might not be satisfied at any finite stage {\sf s}, hence it might be guaranteed only at meta-theoretical level.
+
+
+
+\begin{theorem}
+$\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in {\sf AdaptiveND} if and only if there is a final derivation of $\phi$ from $\Gamma$ in a standard linear adaptive proof.
+\end{theorem}
+
+\begin{proof}
+
+\begin{itemize}
+\item[$\rightarrow$] By assumption $\psi$ is finally derived, therefore there is an abnormality and marking complete proof $P$ in which it is derived. Consider the translation $\mathbb{P}$ of $P$ in a linear adaptive proof: by assumption, $P$ contains every abnormality of its premise set $\Gamma$ and so does $\mathbb{P}$; accordingly, every formula which is marked in $P$ will be marked in $\mathbb{P}$. Because of the completeness with resepct to marking of $P$, then $\mathbb{P}$ must have every unmarked formula which is unmarked in $P$. Provided $P$ includes all its possible extensions and by translation so does $\mathbb{P}$, then by the standard definition of final derivability (see footnote 2) $\psi$ must be finally derived in $\mathbb{P}$ as well.
+
+\item[$\leftarrow$] Assume that $\psi$ is finally derived in some linear adaptive proof $\mathbb{P}$; then $\Gamma\vdash_{CluN}\psi\vee \phi$ with $\phi\cap U(\Gamma)=\emptyset$. By Theorem \ref{thm:clun} there is a provable {\sf AdaptiveND} judgement $\Turn{\Gamma;\cdot}{\psi,\phi}$. By applying {\sf RC}, we obtain a judgement $\TurnNext{\Gamma;\phi^{-}}{\psi}$. If $\TurnMarked{\Gamma;\phi^{-}}{\psi}$ in some abnormality and marking complete proof $P$, then $\phi\cap U(\Gamma)\neq\emptyset$, which contradicts the assumption, hence $\TurnChecked{\Gamma;\phi^{-}}{\psi}$ in $P$.
+\end{itemize}
+\end{proof}
+
 
 Theorem \ref{thm:subform} helps us to characterise finite proof-trees to decide whether a formula is finally derived by identifying the abnormalities derivable in view of the syntactical form of the premises. But it can also be seen as a \textbf{CLuN}-specific variant of the \emph{Derivability Adjustment Theorem} from \cite{batens07}. This result can be stated in multiple-conclusion form as follows:
 \[
